[gd_scene load_steps=3 format=3 uid="uid://btbtk48sslcg3"]

[ext_resource type="Script" uid="uid://byb5c63plmpjj" path="res://Scenes/UI/inventory.gd" id="1_s6m5x"]
[ext_resource type="PackedScene" uid="uid://bjavlsvo6o2qd" path="res://Scenes/UI/bottle_details_panel.tscn" id="2_dt15g"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6m5x")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Condiment Station"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EquippedSection" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="EquippedLabel" type="Label" parent="Panel/VBoxContainer/HSplitContainer/EquippedSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
text = "Equipped"

[node name="EquippedGrid" type="GridContainer" parent="Panel/VBoxContainer/HSplitContainer/EquippedSection"]
unique_name_in_owner = true
layout_mode = 2
columns = 6

[node name="StorageSection" type="VBoxContainer" parent="Panel/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 6

[node name="StorageLabel" type="Label" parent="Panel/VBoxContainer/HSplitContainer/StorageSection"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "Storage"

[node name="StorageGrid" type="GridContainer" parent="Panel/VBoxContainer/HSplitContainer/StorageSection"]
unique_name_in_owner = true
layout_mode = 2
columns = 6

[node name="BottleDetailsPanel" parent="Panel/VBoxContainer" instance=ExtResource("2_dt15g")]
unique_name_in_owner = true
z_index = 55
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="CloseInventory" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -108.0
offset_right = 77.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 56
text = "Close"
